(rule
 (targets constants.ml)
 (deps    ../src/constants.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets infix.ml)
 (deps    ../src/infix.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets date_components.ml)
 (deps    ../src/date_components.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets pattern.ml)
 (deps    ../src/pattern.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets pattern_resolver.ml)
 (deps    ../src/pattern_resolver.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets time_ast.ml)
 (deps    ../src/time_ast.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets time.ml)
 (deps    ../src/time.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets string_map.ml)
 (deps    ../src/string_map.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets time_zone.ml)
 (deps    ../src/time_zone.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets timere_tz_data.ml)
 (deps    ../gen-artifacts/time_zone_data.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets int64_utils.ml)
 (deps    ../src/int64_utils.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets seq_utils.ml)
 (deps    ../src/seq_utils.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets misc_utils.ml)
 (deps    ../src/misc_utils.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets duration.ml)
 (deps    ../src/duration.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets to_sexp.ml)
 (deps    ../src/to_sexp.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets of_sexp.ml)
 (deps    ../src/of_sexp.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets printers.ml)
 (deps    ../src/printers.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets parser_components.ml)
 (deps    ../src/parser_components.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets int_set.ml)
 (deps    ../src/int_set.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets resolver.ml)
 (deps    ../src/resolver.ml)
 (action  (copy %{deps} %{targets}))
)

(test
 (flags     (-w "+a-4-9-29-37-40-42-44-48-50-32" -g))
 (name main)
 (instrumentation (backend bisect_ppx))
 (libraries qcheck
            qcheck-alcotest
            alcotest
            ptime
            ptime.clock.os
            oseq
            seq
            mparser
            containers
            yojson
            )
 )
