(rule
 (targets infix.ml)
 (deps    ../src/infix.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets weekday_set.ml)
 (deps    ../src/weekday_set.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets pattern.ml)
 (deps    ../src/pattern.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets pattern_resolver.ml)
 (deps    ../src/pattern_resolver.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets points.ml)
 (deps    ../src/points.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets time_ast.ml)
 (deps    ../src/time_ast.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets time.ml)
 (deps    ../src/time.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets int64_utils.ml)
 (deps    ../src/int64_utils.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets seq_utils.ml)
 (deps    ../src/seq_utils.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets misc_utils.ml)
 (deps    ../src/misc_utils.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets to_sexp.ml)
 (deps    ../src/to_sexp.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets of_sexp_utils.ml)
 (deps    ../desc/of_sexp_utils.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets of_sexp.ml)
 (deps    ../src/of_sexp.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets printers.ml)
 (deps    ../src/printers.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets int_set.ml)
 (deps    ../src/int_set.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets resolver.ml)
 (deps    ../src/resolver.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets test_utils.ml)
 (deps    ../desc-tests/test_utils.ml)
 (action  (copy %{deps} %{targets}))
)

(test
 (flags     (-w "+a-4-9-29-37-40-42-44-48-50-32" -g))
 (name main)
 (libraries qcheck
            qcheck-alcotest
            alcotest
            ptime
            ptime.clock.os
            oseq
            seq
            mparser
            containers
            yojson
            fmt
            bigarray
            fileutils
            diet
            timedesc
            timedesc.tzdb.full
            timedesc.tzlocal.unix
            )
 )
