(test
 (flags     (-w "+a-4-9-29-37-40-42-44-48-50-70@8" -g))
 (name main)
 (libraries qcheck
            qcheck-alcotest
            alcotest
            ptime
            ptime.clock.os
            oseq
            seq
            mparser
            containers
            yojson
            fmt
            bigarray
            diet
            timedesc
            timedesc-tzdb.full
            timedesc-tzlocal.unix
            timedesc-json
            )
 )
