(rule
 (targets time_zone_constants.ml)
 (deps    ../gen-artifacts/time_zone_constants.ml)
 (action  (copy %{deps} %{targets}))
)

(library
 (flags     (-w "+a-4-9-29-37-40-42-44-48-50-70@8"))
 (name timedesc)
 (public_name timedesc)
 (instrumentation (backend bisect_ppx))
 (libraries
            timedesc-tzdb
            timedesc-tzlocal
            unix
            ptime
            mparser
            angstrom
            seq
            bigarray
            sexplib
 )
)
