(rule
 (targets seq_utils_.ml)
 (deps    ../desc/seq_utils_.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets misc_utils.ml)
 (deps    ../desc/misc_utils.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets parser_components.ml)
 (deps    ../desc/parser_components.ml)
 (action  (copy %{deps} %{targets}))
)

(library
 (flags     (-w "+a-4-9-29-37-40-42-44-48-50-70@8"))
 (name timere_parse)
 (public_name timere-parse)
 (libraries mparser
            re
            timedesc
            timere
 )
)
