(rule
 (targets infix.ml)
 (deps    ../timere/infix.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets weekday_set.ml)
 (deps    ../timere/weekday_set.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets pattern.ml)
 (deps    ../timere/pattern.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets pattern_resolver.ml)
 (deps    ../timere/pattern_resolver.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets points.ml)
 (deps    ../timere/points.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets time_ast.ml)
 (deps    ../timere/time_ast.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets time.ml)
 (deps    ../timere/time.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets int64_utils.ml)
 (deps    ../timere/int64_utils.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets seq_utils_.ml)
 (deps    ../timedesc/seq_utils_.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets seq_utils.ml)
 (deps    ../timere/seq_utils.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets misc_utils.ml)
 (deps    ../timere/misc_utils.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets to_sexp.ml)
 (deps    ../timere/to_sexp.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets of_sexp_utils.ml)
 (deps    ../timedesc-sexp/of_sexp_utils.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets of_sexp.ml)
 (deps    ../timere/of_sexp.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets printers.ml)
 (deps    ../timere/printers.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets int_set.ml)
 (deps    ../timere/int_set.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets resolver.ml)
 (deps    ../timere/resolver.ml)
 (action  (copy %{deps} %{targets}))
)

(rule
 (targets test_utils.ml)
 (deps    ../timedesc-tests/test_utils.ml)
 (action  (copy %{deps} %{targets}))
)

(executable
 (flags     (-w "+a-4-9-29-37-40-42-44-48-50-70@8" -g))
 (name main)
 (libraries qcheck
            qcheck-alcotest
            alcotest
            ptime
            ptime.clock.os
            oseq
            seq
            mparser
            containers
            yojson
            fmt
            bigarray
            fileutils
            diet
            timedesc
            timedesc-sexp
            timedesc-tzdb.full
            timedesc-tzlocal.unix
            )
 )
