(rule
 (targets timere_tzdb.ml)
 (deps    (:gen ../gen-build/gen_tzdb_full.exe))
 (action  (run %{gen} -o %{targets}))
)

(library
 (flags     (-w "+a-4-9-29-37-40-42-44-48-50-32-30@8"))
 (name      timere_tzdb_full)
 (public_name timere.tzdb.full)
 (implements timere_tzdb)
 (libraries containers
 )
)
