(rule
 (targets tzdb_marshalled.ml)
 (deps    (:gen ../gen-build/gen_tzdb_full.exe ) ../gen-artifacts/time_zone_db.sexp)
 (action  (run %{gen} ../gen-artifacts/time_zone_db.sexp %{targets}))
)

(library
 (flags     (-w "+a-4-9-29-37-40-42-44-48-50-32-30@8"))
 (name      timedesc_tzdb_full)
 (public_name timedesc.tzdb.full)
 (implements timedesc_tzdb)
 (libraries containers
 )
)
