(rule
  (targets unix_timedesc_tzlocal.ml)
  (deps ../unix/timedesc_tzlocal.ml)
  (action (copy %{deps} %{targets}))
  )

(library
 (flags     (-w "+a-4-9-29-37-40-42-44-48-50-70@8"))
 (name      timedesc_tzlocal_unix_or_utc)
 (public_name timedesc-tzlocal.unix-or-utc)
 (implements timedesc_tzlocal)
 (libraries unix
 )
)
